<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SirioFootballFriends</string>
    <string name="action_settings">Settings</string>
    <string name="login">ORGANIZZA O CERCA LE PARTITE OVUNQUE TI TROVI</string>
    <string name="label_email">Email </string>
    <string name="email">  Inserire Email</string>
    <string name="label_psw">Password </string>
    <string name="psw">Password</string>
    <string name="bottone_accedi">ACCEDI</string>
    <string name="bottone_registrati">REGISTRATI</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_registrazione">RegistrazioneActivity</string>
    <string name="registrazione">REGISTRATI</string>
    <string name="bottone_salva">SALVA</string>
    <string name="label_psw2">Conferma</string>
    <string name="psw2">password</string>
    <string name="title_activity_profilo">ProfiloActivity</string>
    <string name="bottone_creaPartita">CREA PARTITA</string>
    <string name="bottone_Partecipa">PARTECIPA</string>
    <string name="bottone_modificaProfilo">MODIFICA PROFILO</string>
    <string name="title_activity_partita">PartitaActivity</string>
    <string name="title_activity_partecipa">PartecipaActivity</string>
    <string name="title_activity_modifica_profilo">ModificaProfiloActivity</string>
    <string name="label_nome">Nome</string>
    <string name="label_cognome">Cognome</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_nicknameObl">Nickname *</string>
    <string name="label_eta">Età</string>
    <string name="label_annonascita">Nato il</string>
    <string name="label_citta">Città</string>
    <string name="label_cittaObl">Città *</string>
    <string name="label_gioca_a">Gioca a</string>
    <string name="label_sesso">Sesso</string>
    <string name="label_sessoObl">Sesso *</string>
    <string name="label_ruolo">Ruolo</string>
    <string name="label_livello">Livello</string>
    <string name="label_cellulare">Cellulare</string>
    <string name="cellulare">Numero</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="nickname">Nickname</string>
    <string name="annonascita">Anno di nascita</string>
    <string name="eta">età</string>
    <string name="citta">Città</string>
    <string name="radio_sessoM"> M      </string>
    <string name="radio_sessoF"> F </string>

    <string-array name="ruolo">
        <item>Attaccante</item>
        <item>Centrocampista</item>
        <item>Difensore</item>
        <item>Portiere</item>
    </string-array>
    <string-array name="livello">
        <item>Principiante</item>
        <item>Amatoriale</item>
        <item>Esperto</item>
    </string-array>
    <string-array name="tipoPartitaList">
        <item>Calcio a 5</item>
        <item>Calcio a 11</item>
    </string-array>

    <string name="bottone_annulla">ANNULLA</string>
    <string name="label_nomeCampo">Campo</string>
    <string name="label_indirCampo">Indirizzo</string>
    <string name="label_indirCampoObl">Indirizzo *</string>
    <string name="label_data">Data</string>
    <string name="label_ora">Ora</string>
    <string name="label_dataObl">Data *</string>
    <string name="label_oraObl">Ora *</string>
    <string name="label_costo">Costo tot</string>
    <string name="label_provincia">Provincia</string>
    <string name="label_provinciaObl">Provincia *</string>
    <string name="label_nmancanti">N° Giocatori</string>
    <string name="nomeCampo"> Nome Campetto</string>
    <string name="indirizzoCampo"> via, n° , ecc</string>
    <string name="provincia">Provincia</string>
    <string name="nmancanti">   mancanti</string>
    <string name="data_hint">gg-mm-aaaa</string>
    <string name="ora_hint">hh:mm</string>
    <string name="costo">00.00 Euro</string>
    <string name="label_cercaPerCitta">Cerca per Città</string>
    <string name="label_cercaPerProvincia">Cerca per Provincia</string>
    <string name="title_activity_conferma_partecipa">ConfermaPartecipaActivity</string>
    <string name="Partecipa">PARTECIPA</string>
    <string name="label_amministratore">Amministratore</string>
    <string name="bottoneConfermaPartecipa">PARTECIPA</string>
    <string name="action_logout">Esci</string>
    <string name="action_info">Informazioni</string>
    <string name="action_home">Home</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="info1">è stato realizzato da :</string>
    <string name="info2">Tommaso De Gennaro</string>
    <string name="info3">Nicolina Diana</string>
    <string name="info4">Alessandro Riccio</string>
    <string name="info5">Versione 1.0</string>
    <string name="info0">SirioFootballFriends</string>
    <string name="title_activity_visualizza_profilo">VisualizzaProfiloActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="livello2">Livello</string>
    <string name="label_voto">Voto</string>
    <string name="voto">Voto</string>
    <string name="label_partite_giocate">Partite giocate</string>
    <string name="partite_giocate">#</string>
    <string name="label_partite_vinte">Partite vinte</string>
    <string name="partite_vinte">#</string>
    <string name="label_partite_perse">Partite perse</string>
    <string name="partite_perse">#</string>
    <string name="label_bidoni">Bidoni</string>
    <string name="bidoni">#</string>
    <string name="label_tipoPartita">Tipo partita</string>
    <string name="label_tipoPartitaObl">Tipo partita *</string>
    <string name="label_tipoTerreno">Tipo terreno</string>
    <string name="label_coperto">Coperto</string>
    <string name="coperto">Coperto/Scoperto</string>
    <string name="tipoTerreno">erba sintetica ecc</string>
    <string name="label_note">Note aggiuntive</string>
    <string name="Note">Note...</string>
    <string name="label_contatto">Contatto</string>
    <string name="label_contattoObl">Contatto *</string>
    <string name="contatto">cell</string>
    <string name="bottone_prosegui">PROSEGUI</string>
    <string name="nonspecificato">non specificato</string>
    <string name="title_activity_calcio_a5">CalcioA5Activity</string>
    <string name="scegliRuolo">Scegli in che ruolo giocare</string>
    <string name="label_squadra1">SQUADRA 1</string>
    <string name="label_squadra2">SQUADRA 2</string>
    <string name="label_attaccante">Attaccante</string>
    <string name="label_difensore">Difensore</string>
    <string name="label_portiere">Portiere</string>
    <string name="label_alaDx">Ala destra</string>
    <string name="label_alaSx">Ala sinistra</string>
    <string name="btnDisponibile">Disponibile</string>
    <string name="bottone_prossimaPartita">PROSSIMA PARTITA</string>
    <string name="bottone_leMiePartite">LE MIE PARTITE</string>
    <string name="title_activity_dettaglio_partita">Dettaglio Partita</string>
    <string name="title_activity_le_mie_partite">LeMiePartiteActivity</string>
    <string name="title_activity_leMiePartite">LE MIE PARTITE</string>
    <string name="title_activity_partite_in_programma">PartiteInProgrammaActivity</string>
    <string name="bottone_PartiteInProgramma">PARTITE IN PROGRAMMA</string>
    <string name="bottone_PartiteGiocate">PARTITE GIOCATE</string>
    <string name="bottone_PartiteOrganizzate">PARTITE ORGANIZZATE</string>
    <string name="title_activity_partite_giocate">PARTITE GIOCATE</string>
    <string name="title_activity_partite_organizzate">PARTITE ORGANIZZATE</string>
    <string name="label_PartiteInProgramma">PARTITE IN PROGRAMMA</string>
    <string name="title_activity_calcio_a11">CalcioA11Activity</string>
    <string name="label_centravanti">Centravanti</string>
    <string name="label_mezzalaDx">Mezzala destra</string>
    <string name="label_mezzalaSx">Mezzala sinistra</string>
    <string name="label_terzinoDx">Terzino destro</string>
    <string name="label_terzinoSx">Terzino sinistro</string>
    <string name="label_medianoDx">Mediano destro</string>
    <string name="label_medianoSx">Mediano sinistro</string>
    <string name="label_centromediano">Centromediano</string>
    
</resources>
