<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >    
    <TableLayout 
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilo2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="horizontal|vertical"
    tools:context="com.github.nicolediana.siriofootballfriends.ProfiloActivity" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="PROFILO"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/rosso2"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="10dp">        
        <TextView
            android:id="@+id/label_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordo"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:textColor="@color/rosso2"
            android:textColorHint="@color/giallo"
            android:textStyle="bold" >
            <requestFocus />
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/label_cognome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cognome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/cognome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordo"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/cognome"
            android:inputType="textPersonName"
            android:textColor="@color/rosso2"
            android:textColorHint="@color/giallo"
            android:textStyle="bold" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >
        <TextView
            android:id="@+id/label_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nicknameObl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:background="@drawable/bordo"
            android:gravity="center"
            android:hint="@string/nickname"
            android:textColor="@color/rosso2"
            android:textColorHint="@color/giallo"
            android:textStyle="bold" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/label_cellular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cellulare"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cellulare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:background="@drawable/bordo"
            android:gravity="center"
            android:hint="@string/cellulare"
            android:inputType="phone"
            android:textColor="@color/rosso2"
            android:textColorHint="@color/giallo"
            android:textStyle="bold" >
        </EditText>
     </TableRow>    
     <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >
        <TextView
            android:id="@+id/label_annonascit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_annonascita"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/annonascita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:background="@drawable/bordo"
            android:gravity="center"
            android:hint="@string/annonascita"
            android:inputType="number"
            android:textColor="@color/rosso2"
            android:textColorHint="@color/giallo"
            android:textStyle="bold" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >
        <TextView
            android:id="@+id/label_sesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sessoObl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />
        <TableRow
            android:id="@+id/tableRow61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <RadioGroup
                android:id="@+id/radio_sesso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/radio_sessoM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_sessoM"
                    android:textColor="@color/nero"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radio_sessoF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_sessoF"
                    android:textColor="@color/nero"
                    android:textStyle="bold" />

            </RadioGroup>
        </TableRow>        
    </TableRow>
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >
        <TextView
            android:id="@+id/label_citta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cittaObl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/citta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:background="@drawable/bordo"
            android:gravity="center"
            android:hint="@string/citta"
            android:textColor="@color/rosso2"
            android:textColorHint="@color/giallo"
            android:textStyle="bold" />
    </TableRow>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/salva"
        android:onClick="onClickSalva" />

</TableLayout>
</ScrollView>